# opencl.m4

./: Makefile  Makefile.am  README  configure.ac
m4/: opencl.m4
tests/: Makefile.am  ocl-vendor-check.c  ocl-vendor-check.cpp
